--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-scripts": "2.0.4",
+    "react-slick": "^0.23.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
