--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cy": "yarn cypress open"
+    "cy": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
