added api to url

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "flick-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://kyebuffery.co.uk/flick-demo",
   "dependencies": {
     "axios": "^0.18.0",
     "cypress": "^3.1.0",
